feat:create mobile version

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
           <ul class="card__list">
             <li>
-              <p>80K</p>
-              <span>Followers</span>
+              <h3 class="numbers">80K</h3>
+              <span class="infos">Followers</span>
             </li>
             <li>
-              <p>803K</p>
-              <span>Likes</span>
+              <h3 class="numbers">803K</h3>
+              <span class="infos">Likes</span>
             </li>
             <li>
-              <p>1.4K</p>
-              <span>Photos</span>
+              <h3 class="numbers">1.4K</h3>
+              <span class="infos">Photos</span>
             </li>
           </ul>
         </div>
